fix: logo & edit this page & buttons on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -16,6 +16,9 @@
   .heroBanner {
     padding: 2rem;
   }
+  .buttons > a {
+    width: 80%;
+  }
 }
 
 .buttons {
@@ -23,4 +26,5 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  flex-wrap: wrap;
 }
